# librdmaft

./: CMakeLists.txt  README.md
include/: rdmaft_common.h  rdmaft_recv.h  rdmaft_send.h
src/: CMakeLists.txt  rdmaft_common.c  rdmaft_recv.c  rdmaft_send.c
test/: Makefile  client.c  server.c
